# MathProblemGenerator

./: .gitignore  CMakeLists.txt  README.md
include/: daemon.hpp  files.hpp  generate.hpp  input-parsing.hpp  input_parsing.hpp  polynomial-factoring.hpp
include/generate/: all-inc.hpp  cross-product.hpp  dot-product.hpp  polynomial-factoring.hpp
internal/math-problem/include/mprgen/: number-gen.hpp  number.hpp
internal/math-problem/src/: math-problem.cpp
lib/: CMakeLists.txt
lib/generate/: CMakeLists.txt
lib/generate/include/: generate.hpp
lib/generate/include/generate/: all-problems.hpp  cross-product.hpp  dot-product.hpp  matrix-multiplication.hpp  number-gen.hpp  polynomial-factoring.hpp
lib/generate/include/math/: matrix.hpp
lib/generate/lib/math-problem/: CMakeLists.txt
lib/generate/lib/math-problem/include/mprgen/: math-problem.hpp
lib/generate/lib/math-problem/src/: number-gen.cpp
lib/generate/src/: math-problem.cpp  number-gen.cpp
lib/generate/src/generate/: cross-product.cpp  dot-product.cpp  math-problem.cpp  matrix-multiplication.cpp  number-gen.cpp  polynomial-factoring.cpp
lib/generate/src/math/: matrix.cpp
lib/math-problem/src/: number-gen.cpp
profiling/: main.cpp
src/: daemon.cpp  daemon_settings.cpp  daemon_spawn_process.cpp  files.cpp  generate.cpp  input-parsing.cpp  input_parsing.cpp  main.cpp  polynomial-factoring.cpp  polynomial-factoring.hpp
src/generate/: cross-product.cpp  polynomial-factoring.cpp
